--- a/HYNewNest/Features(主代码)/LoginRegisterComponent/Controller/CNBindPhoneVC.xib
+++ b/HYNewNest/Features(主代码)/LoginRegisterComponent/Controller/CNBindPhoneVC.xib
@@ -133,13 +133,13 @@
                         <constraint firstAttribute="height" constant="80" id="gFa-z2-Ikk"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TTB-nh-bU5">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TTB-nh-bU5" customClass="CNTwoStatusBtn">
                     <rect key="frame" x="30" y="704" width="354" height="54"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="54" id="bNk-3D-qWE"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
-                    <state key="normal" backgroundImage="h5">
+                    <state key="normal" title="绑定">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <state key="disabled">
@@ -156,7 +156,7 @@
                     </constraints>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                     <state key="normal" title="跳过" backgroundImage="l_btn_hh">
-                        <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <connections>
                         <action selector="pass:" destination="-1" eventType="touchUpInside" id="HFK-A7-Ldx"/>
@@ -194,7 +194,6 @@
     </objects>
     <resources>
         <image name="bg-1" width="375" height="609"/>
-        <image name="h5" width="315" height="48"/>
         <image name="l_btn_hh" width="315" height="48"/>
     </resources>
 </document>
