--- a/HYNewNest/Features(主代码)/MeComponent/Controller/CNMineVC.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/Controller/CNMineVC.xib
@@ -32,6 +32,7 @@
                 <outlet property="scrollView" destination="9b1-FJ-wgg" id="ZWZ-2P-1Go"/>
                 <outlet property="shareBgView" destination="BpC-IV-WtY" id="iaB-Fa-ItY"/>
                 <outlet property="shareBgViewH" destination="pbd-Ke-6gA" id="Y4D-Ey-Wfi"/>
+                <outlet property="sixthTapBtn" destination="FZO-U6-913" id="8x3-Zs-Sio"/>
                 <outlet property="sixthTapLb" destination="MxN-37-T5p" id="XJ2-rC-WX3"/>
                 <outlet property="switchBtn" destination="Fm6-UV-UE2" id="Nzv-B3-6dh"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -43,6 +44,9 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
             <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="路径" translatesAutoresizingMaskIntoConstraints="NO" id="0kd-rq-BRm">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="209"/>
+                </imageView>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" translatesAutoresizingMaskIntoConstraints="NO" id="9b1-FJ-wgg">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
@@ -906,7 +910,7 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="0zX-Xz-mSg" secondAttribute="bottom" constant="15" id="07B-Y2-Y6a"/>
                                 <constraint firstAttribute="trailing" secondItem="omV-JL-6aB" secondAttribute="trailing" constant="15" id="3Tp-hq-IZ4"/>
@@ -946,6 +950,9 @@
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="0kd-rq-BRm" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="4KP-jr-ZGx"/>
+                <constraint firstItem="0kd-rq-BRm" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="7Rm-iS-YW0"/>
+                <constraint firstItem="0kd-rq-BRm" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Fau-cp-yuk"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="9b1-FJ-wgg" secondAttribute="trailing" id="Fsn-bZ-fcr"/>
                 <constraint firstItem="9b1-FJ-wgg" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="P6U-ew-nyC"/>
                 <constraint firstItem="9b1-FJ-wgg" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="QsY-fg-Wh7"/>
@@ -975,6 +982,7 @@
         <image name="yhk" width="24" height="24"/>
         <image name="yjfk" width="24" height="24"/>
         <image name="zb" width="40" height="40"/>
+        <image name="路径" width="375" height="209"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
