--- a/HYNewNest/Features(主代码)/MeComponent/View/BYMyWalletView.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/View/BYMyWalletView.xib
@@ -11,7 +11,12 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BYMyWalletView">
             <connections>
                 <outlet property="betProgressView" destination="FHt-vH-7pb" id="ngG-3G-nQF"/>
+                <outlet property="currencyLb" destination="OMh-Ao-zyh" id="xaM-aF-Dgg"/>
+                <outlet property="effectiveBetAmountLb" destination="JjO-11-VoR" id="xEm-O0-hhu"/>
+                <outlet property="localBalanceLb" destination="6N9-Zn-uIC" id="G8A-kp-Hno"/>
                 <outlet property="nextLevelBtn" destination="V8B-jl-zkd" id="2gG-SN-yms"/>
+                <outlet property="promoteAmountLb" destination="HT0-P6-aPJ" id="7rz-sH-cPm"/>
+                <outlet property="withdrableAmountLb" destination="0yo-kK-9Cp" id="WX1-6D-EG3"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -19,7 +24,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="142"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="FHt-vH-7pb">
+                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.01" translatesAutoresizingMaskIntoConstraints="NO" id="FHt-vH-7pb">
                     <rect key="frame" x="15" y="67" width="384" height="2"/>
                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
@@ -70,6 +75,9 @@
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YXE-Xl-4ul">
                                     <rect key="frame" x="0.0" y="0.0" width="138" height="73"/>
+                                    <connections>
+                                        <action selector="click2ShowAccountBalncesDetail:" destination="-1" eventType="touchUpInside" id="yrl-Kr-l5t"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" red="0.1529411765" green="0.1529411765" blue="0.28627450980000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -157,6 +165,9 @@
                     <state key="normal" title="VIP0" image="white_disclosure">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="didTapVIPDetailBtn:" destination="-1" eventType="touchUpInside" id="O4g-nU-6Zl"/>
+                    </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="本周有效投注额" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q4t-PT-FvW">
                     <rect key="frame" x="15" y="20" width="100" height="20"/>
@@ -198,7 +209,7 @@
                 </userDefinedRuntimeAttribute>
                 <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
             </userDefinedRuntimeAttributes>
-            <point key="canvasLocation" x="234.78260869565219" y="97.767857142857139"/>
+            <point key="canvasLocation" x="148" y="65"/>
         </view>
     </objects>
     <resources>
