--- a/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/View/HYWithdrawCardCell.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/View/HYWithdrawCardCell.xib
@@ -21,7 +21,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yhM-J9-dpm">
                         <rect key="frame" x="30" y="10" width="315" height="86"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Exchanges-logo-1" translatesAutoresizingMaskIntoConstraints="NO" id="B8O-dC-ok1">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Exchanges-logo-1" translatesAutoresizingMaskIntoConstraints="NO" id="B8O-dC-ok1">
                                 <rect key="frame" x="15" y="19" width="48" height="48"/>
                                 <color key="backgroundColor" red="0.023529411764705882" green="0.023529411764705882" blue="0.043137254901960784" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <constraints>
